# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-optimization-env"
version = "1.0.0"
description = "An OpenEnv-compatible environment where an AI agent learns to optimize job application resumes through sequential actions."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "python-multipart",
]

[project.scripts]
server = "server.app:main"   # Important for openenv validate

[tool.setuptools]
packages = ["server", "models"]
package-dir = {"" = "."